# function-ref

./: .clang-format  .clang-tidy  CMakeLists.txt  LICENSE
cmake/: extra_local_settings.cmake
include/: function_ref.hpp
src/: function_ref.cpp
test/: CMakeLists.txt
test/src/: test_generic.cpp
